Se han modificado las extensiones html a ejs
Se ha implementado la forma de usar motor de plantillas

--- a/src/public/login.ejs
+++ b/src/public/login.ejs
@@ -32,7 +32,7 @@
 
 
     <script src="./bootstrap.bundle.js"></script>
-    <script src="../controllers/feed.controllers.js"></script>
+    <!-- <script src="../controllers/feed.controllers.js"></script> -->
 </body>
 
 </html>
