--- a/src/public/login.ejs
+++ b/src/public/login.ejs
@@ -26,8 +26,23 @@
         </div>
     </nav>
 
-    <div class="container-fluid">
-        <h1>Aquí va el login</h1>
+    <div class="container-sm d-flex flex-column align-content-center">
+        <form action="#" method="post" class="align-self-center mt-4 bg-body-tertiary p-5 border border-secondary border-start-0 border-top-0" style="width: 60%; max-width: 400px;">
+            <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Username</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">Tu usuario es único</div>
+            </div>
+            <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">Password</label>
+                <input type="password" class="form-control" id="exampleInputPassword1">
+            </div>
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">Recordar</label>
+            </div>
+            <!-- <button type="submit" class="btn btn-primary">Iniciar sesión</button> -->
+        </form>
     </div>
 
 
