--- a/src/public/signinForm.ejs
+++ b/src/public/signinForm.ejs
@@ -22,9 +22,10 @@
             </form>
         </div>
     </nav>
-    <div class="container bg-red d-flex flex-column p-5">
+    <div class="container bg-red d-flex flex-column p-2">
         <h1 class="align-self-center">Registro de usuario</h1>
-        <form action="/signin" method="post" class="d-flex flex-column">
+        <form action="/signin" method="post"
+            class="d-flex flex-column mt-1 align-self-center bg-body-tertiary p-5 border border-secondary border-start-0 border-top-0" style="width: 60%; max-width: 600px;">
             <div class="mb-3">
                 <label for="n_control" class="form-label">Numero de control</label>
                 <input type="text" name="n_control" class="form-control" id="n_control" placeholder="Ej: 20497865">
