--- a/src/public/feed.ejs
+++ b/src/public/feed.ejs
@@ -27,10 +27,11 @@
         <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
         <!-- <button class="btn btn-outline-danger" type="submit"><a href="/signin">Registro</a></button> -->
         <% if(userData){ %>
-          <button class="btn btn-outline-success ms-2" type="submit"><a href="/logout">Log out</a></button>
+          <button class="btn btn-outline-success ms-2"><a href="/profile">Perfil</a></button>
+          <button class="btn btn-outline-success ms-2"><a href="/logout">Log out</a></button>
         <% }else { %>
-          <button class="btn btn-outline-success ms-2" type="submit"><a href="/login">Log in</a></button>
-          <button class="btn btn-outline-danger ms-2" type="submit"><a href="/signin">Registro</a></button>
+          <button class="btn btn-outline-danger ms-2"><a href="/signin">Registro</a></button>
+          <button class="btn btn-outline-success ms-2"><a href="/login">Log in</a></button>
         <% } %>
 
       </form>
@@ -46,7 +47,9 @@
           <p class="card-text"> <%= elem.descripcion  %></p>
           <p class="card-text">$ <%= elem.precio %></p>
           <% if(userData){ %>
-            <a  href="/delete/<%= elem.id_venta %>" class="btn btn-danger position-absolute btn_delete_post--pos">Eliminar</a>
+            <% if(userData.n_control_cliente === elem.n_control_cliente){ %>
+              <a  href="/delete/<%= elem.id_venta %>" class="btn btn-danger position-absolute btn_delete_post--pos">Eliminar</a>
+            <% } %>
           <% } %>
         </div>
       </div>
