--- a/src/public/login.ejs
+++ b/src/public/login.ejs
@@ -19,7 +19,7 @@
             <a class="navbar-brand ms-4">Local Trader</a>
             <form class="d-flex flex-row align-content-center justify-content-center" role="search">
                 <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
-                <button class="btn btn-outline-danger" type="submit"><a href="/signin">Registro</a></button>
+                <button class="btn btn-outline-danger" type="submit"><a href="/signup">Registro</a></button>
                 <button class="btn btn-outline-danger ms-2" type="submit"><a href="./">Inicio</a></button>
                 <!-- <button class="btn btn-outline-success ms-2" type="submit"><a href="#">Iniciar sesión</a></button> -->
             </form>
