--- a/src/public/test.ejs
+++ b/src/public/test.ejs
@@ -4,23 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link type="text/css" rel="stylesheet" href="bootstrap.css">
     <title>Test</title>
 </head>
 <body>
-    <div class="container-sm">
-        <p><%= userLog.n_control_cliente %></p>
-    </div>
-
-        <% data.reverse().forEach( elem=> { %>
-          <div">
-            <!-- <img src="..." class="card-img-top" alt="..."> -->
-            <div>
-              <h5><%= elem.titulo %></h5>
-              <p> <%= elem.descripcion  %></p>
-              <p>$ <%= elem.precio %></p>
-              <a href="/delete/<%= elem.id_venta %>">Eliminar</a>
-            </div>
-          </div>
-          <% }) %>
+  <h1>salu2</h1>
 </body>
 </html>
