se han comentado los controllers
Se ha modificado el renderizado de los datos en feed.controllers

--- a/src/public/login.ejs
+++ b/src/public/login.ejs
@@ -30,7 +30,7 @@
         <form action="/login" method="post" class="align-self-center mt-4 bg-body-tertiary p-5 border border-secondary border-start-0 border-top-0" style="width: 60%; max-width: 400px;">
             <div class="mb-3">
                 <label for="username" class="form-label">Número de control</label>
-                <input type="text" name="n_control_cliente" class="form-control" id="username" aria-describedby="username" required>
+                <input type="text" name="n_control" class="form-control" id="username" aria-describedby="username" required>
                 <div id="username" class="form-text">Tu usuario es único</div>
             </div>
             <div class="mb-3">
