--- a/src/public/feed.ejs
+++ b/src/public/feed.ejs
@@ -26,10 +26,11 @@
         <% } %>
         <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
         <!-- <button class="btn btn-outline-danger" type="submit"><a href="/signup">Registro</a></button> -->
-        <button class="btn btn-outline-success ms-2"><a href="/profile">Perfil</a></button>
         <% if(userData){ %>
+          <button class="btn btn-outline-success ms-2"><a href="/<%=userData.n_control%>">Perfil</a></button>
           <button class="btn btn-outline-success ms-2"><a href="/logout">Log out</a></button>
         <% }else { %>
+          <button class="btn btn-outline-success ms-2"><a href="/profile">Perfil</a></button>
           <button class="btn btn-outline-danger ms-2"><a href="/signup">Registro</a></button>
           <button class="btn btn-outline-success ms-2"><a href="/login">Log in</a></button>
         <% } %>
@@ -47,7 +48,7 @@
           <p class="card-text"> <%= elem.descripcion  %></p>
           <p class="card-text">$ <%= elem.precio %></p>
           <% if(userData){ %>
-            <% if(userData.n_control_cliente === elem.n_control_cliente){ %>
+            <% if(userData.n_control === elem.n_control_cliente){ %>
               <a  href="/delete/<%= elem.id_venta %>" class="btn btn-danger position-absolute btn_delete_post--pos">Eliminar</a>
             <% } %>
           <% } %>
