--- a/src/styles/feed.css
+++ b/src/styles/feed.css
@@ -4,6 +4,10 @@
     text-decoration: none;
 }
 
+:root {
+    --generalPost: #f4a259;
+}
+
 .navbar--config {
     position: relative;
 }
@@ -22,6 +26,14 @@
 
 .btn_delete_post--pos {
     right: 10px;
-    top: calc(50% - 15px);
+    top: 52px;
 }
 
+.card-body--config {
+    box-shadow: 2px 2px 2px rgba(128, 128, 128, 0.562);
+}
+
+.btn_details--pos {
+    right: 10px;
+    top: 10px;
+}
